--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="/index.html" title="Home"
+        <a class="navbar-brand" href="/index.html" title="nav About -Home logo"
           ><img
             src="/images/logo_square.jpg"
             alt="Walk my shoes small logo"
@@ -56,28 +56,41 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html" title="Home"
+              <a class="nav-link" href="/index.html" title="nav About -Home"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="/about.html" title="About">About</a>
+              <a class="nav-link" href="/about.html" title="nav About -About"
+                >About</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/essays/essays.html" title="Essays"
+              <a
+                class="nav-link"
+                href="/essays/essays.html"
+                title="nav About -Essays"
                 >Essays</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/poems/poems.html" title="Poems"
+              <a
+                class="nav-link"
+                href="/poems/poems.html"
+                title="nav About -Poems"
                 >Poems</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/blog/blog.html" title="Blog">Blog</a>
+              <a class="nav-link" href="/blog/blog.html" title="nav About -Blog"
+                >Blog</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/index.html#contact" title="Contact"
+              <a
+                class="nav-link"
+                href="/index.html#contact"
+                title="nav About -Contact"
                 >Contact</a
               >
             </li>
