--- a/essays/disappearing.html
+++ b/essays/disappearing.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Essays - Walk My Shoes</title>
+    <meta
+      name="description"
+      content="I quieted my voice
+        until I had none. I muted myself. But quiet is invisible, and that's how
+        I disappeared."
+    />
+    <title>Disappearing - Walk My Shoes</title>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -31,7 +37,10 @@
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="/index.html" title="Home"
+        <a
+          class="navbar-brand"
+          href="/index.html"
+          title="nav Disappearing -Home logo"
           ><img
             src="/images/logo_square.jpg"
             alt="Walk my shoes small logo"
@@ -52,28 +61,50 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html" title="Home"
+              <a
+                class="nav-link"
+                href="/index.html"
+                title="nav Disappearing -Home"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html" title="About">About</a>
+              <a
+                class="nav-link"
+                href="/about.html"
+                title="nav Disappearing -About"
+                >About</a
+              >
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="/essays/essays.html" title="Essays"
+              <a
+                class="nav-link"
+                href="/essays/essays.html"
+                title="nav Disappearing -Essays"
                 >Essays</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/poems/poems.html" title="Poems"
+              <a
+                class="nav-link"
+                href="/poems/poems.html"
+                title="Pnav Disappearing -oems"
                 >Poems</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="blog/blog.html" title="Blog">Blog</a>
+              <a
+                class="nav-link"
+                href="blog/blog.html"
+                title="nav Disappearing -Blog"
+                >Blog</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#contact" title="Contact"
+              <a
+                class="nav-link"
+                href="index.html#contact"
+                title="nav Disappearing -Contact"
                 >Contact</a
               >
             </li>
