--- a/essays/essays.html
+++ b/essays/essays.html
@@ -32,7 +32,7 @@
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="/index.html" title="Home"><img src="/images/logo_square.jpg"
+        <a class="navbar-brand" href="/index.html" title="nav Essays -Home logo"><img src="/images/logo_square.jpg"
             alt="Walk my shoes small logo" title="Walk my shoes logo" class="logo-navbar" /></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,22 +41,22 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html" title="Home">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/index.html" title="nav Essays -Home">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html" title="About">About</a>
+              <a class="nav-link" href="/about.html" title="nav Essays -About">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/essays/essays.html" title="Essays">Essays</a>
+              <a class="nav-link active" href="/essays/essays.html" title="nav Essays -Essays">Essays</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/poems/poems.html" title="Poems">Poems</a>
+              <a class="nav-link" href="/poems/poems.html" title="nav Essays -Poems">Poems</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/blog/blog.html" title="Blog">Blog</a>
+              <a class="nav-link" href="/blog/blog.html" title="nav Essays -Blog">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/index.html#contact" title="Contact">Contact</a>
+              <a class="nav-link" href="/index.html#contact" title="nav Essays -Contact">Contact</a>
             </li>
           </ul>
         </div>
