--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
        </section>
         <section class="contact" id="contact">
             <h2><strong>Contact</strong></h2>
-            <a href="https://www.instagram.com/walkmyshoes.words/" title="icon link to Walk my shoes Instagram" target="_blank" class="text-rigt contact-links"><i
+            <a href="https://www.instagram.com/walkmyshoes.words/" title="Link to Walk my shoes Instagram" target="_blank" class="text-rigt contact-links"><i
                     class="fab fa-instagram fa-2x"></i></a>
-            <a href="https://www.instagram.com/walkmyshoes.words/" title="text link to Walk my shoes Instagram" target="_blank"
+            <a href="https://www.instagram.com/walkmyshoes.words/" title="Link to Walk my shoes Instagram" target="_blank"
                 class="text-rigt contact-links">@walkmyshoes.words</a>
             <br />
 
-            <a href="mailto:walkmyshoes.words@gmail.com" title="icon link to e-mail" class="contact-links"><i class="far fa-envelope fa-2x"></i></a>
-            <a href="mailto:walkmyshoes.words@gmail.com" title="text link to e-mail" class="contact-links">walkmyshoes.words@gmail.com</a>
+            <a href="mailto:walkmyshoes.words@gmail.com" title="link to e-mail" class="contact-links"><i class="far fa-envelope fa-2x"></i></a>
+            <a href="mailto:walkmyshoes.words@gmail.com" title="link to e-mail" class="contact-links">walkmyshoes.words@gmail.com</a>
         </section>
         <footer>
             <p>Coded and designed by: Irene Ortega</p>
