--- a/essays/essays.html
+++ b/essays/essays.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Collection of essays written by Walk my shoes" />
+    <meta
+      name="description"
+      content="Collection of essays written by Walk my shoes"
+    />
     <title>Essays - Walk My Shoes</title>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -32,31 +35,54 @@
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="/index.html" title="Home"><img src="/images/logo_square.jpg"
-            alt="Walk my shoes small logo" title="Walk my shoes logo" class="logo-navbar" /></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="/index.html" title="Home"
+          ><img
+            src="/images/logo_square.jpg"
+            alt="Walk my shoes small logo"
+            title="Walk my shoes logo"
+            class="logo-navbar"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html" title="Home">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/index.html" title="Home"
+                >Home <span class="sr-only">(current)</span></a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/about.html" title="About">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/essays/essays.html" title="Essays">Essays</a>
+              <a
+                class="nav-link active"
+                href="/essays/essays.html"
+                title="Essays"
+                >Essays</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/poems/poems.html" title="Poems">Poems</a>
+              <a class="nav-link" href="/poems/poems.html" title="Poems"
+                >Poems</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/blog/blog.html" title="Blog">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/index.html#contact" title="Contact">Contact</a>
+              <a class="nav-link" href="/index.html#contact" title="Contact"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -81,16 +107,35 @@
             <h2><a href="/essays/some-water.html">Some water in between</a></h2>
             <h5>02/11/2019</h5>
             <p>
-              Almost three years later, I’m sitting in the place where I first saw
-              him. A cozy but crowded café, immersed in the noise of the espresso
-              machines working non-stop, helping to quiet my thoughts, like it did
-              back then.
+              Almost three years later, I’m sitting in the place where I first
+              saw him. A cozy but crowded café, immersed in the noise of the
+              espresso machines working non-stop, helping to quiet my thoughts,
+              like it did back then.
               <a href="/essays/some-water.html" class="read-more-link"
                 >[Read more]</a
               >
             </p>
           </div>
-        </div>
+          <div class="row essay-entry-row">
+            <div class="col-md-6 essay-entry">
+              <h2>
+                <a href="/essays/undertow-sadness.html"
+                  >The undertow of sadness</a
+                >
+              </h2>
+              <h5>05/10/2019</h5>
+              <p>
+                I felt heavy, slow, dragging, so tired. Waking up was painful. I
+                felt as if I had a brick pushing down on my chest. I couldn’t
+                breathe. I would gather absolutely every bit of strength I had
+                to push myself out of bed, and then there was nothing left to
+                face the day.
+                <a href="/essays/undertow-sadness.html" class="read-more-link"
+                  >[Read more]</a
+                >
+              </p>
+            </div>
+          </div>
         </div>
       </div>
       <div class="other-pages">
