--- a/essays/undertow-sadness.html
+++ b/essays/undertow-sadness.html
@@ -144,7 +144,7 @@
         <br />
         <br />
         I can’t really point out where, when or how it started. That winter was
-        tough. They all were. Dark and cold, I felt heavy, slow, dragging, so
+        tough. They all were. Dark and cold. I felt heavy, slow, dragging, so
         tired. Waking up was painful. I felt as if I had a brick pushing down on
         my chest. I couldn’t breathe. I would gather absolutely every bit of
         strength I had to push myself out of bed, and then there was nothing
